--- a/css/media.css
+++ b/css/media.css
@@ -2,22 +2,33 @@
 
 /* Large Devices, Wide Screens */
 @media only screen and (max-width : 1200px) {
-
+    
 }
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px) {
-
+    .main_mnu{
+        display: none;
+    }
+    .toggle-mnu{
+        line-height: 95px;
+    }
 }
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px) {
-
+    
 }
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px) {
-
+    .logo img{
+	width: 80px;
+	border-radius: 60px;
+    }
+    .toggle-mnu{
+        line-height: 90px;
+    }
 }
 
 /* Custom, iPhone Retina */
