--- a/css/main.css
+++ b/css/main.css
@@ -118,10 +118,9 @@ h2{
 .toggle-mnu {
   display: block;
   width: 28px;
-  height: 30px;
-  margin: 30px auto 10px;
+  height: 15px;
+  margin: 45px auto 0px;
   float: right;
-  color: #F5F5F5;
 }
 
 .toggle-mnu span:after,
@@ -144,7 +143,7 @@ h2{
 .toggle-mnu span:before {
   width: 100%;
   height: 5px;
-  background-color: #888;
+  background-color: #F5F5F5;
   transition: all 0.3s;
   backface-visibility: hidden;
   border-radius: 2px;
