--- a/css/fonts.css
+++ b/css/fonts.css
@@ -79,3 +79,14 @@
 			font-style: normal;
 			font-weight: normal;
 	}
+	/* Код для подключения шрифта в /css/stylename.css */
+
+	@font-face {
+			font-family: "MarckScriptRegular";
+			src: url("../fonts/MarckScriptRegular/MarckScriptRegular.eot");
+			src: url("../fonts/MarckScriptRegular/MarckScriptRegular.eot?#iefix")format("embedded-opentype"),
+			url("../fonts/MarckScriptRegular/MarckScriptRegular.woff") format("woff"),
+			url("../fonts/MarckScriptRegular/MarckScriptRegular.ttf") format("truetype");
+			font-style: normal;
+			font-weight: normal;
+	}
