--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,7 @@ body {
 .top-header{
 	min-height: 620px;
 	position: relative;
+	padding-bottom: 120px;
 }
 .header_topline{
 	background-color: #43484c;
@@ -53,16 +54,14 @@ body {
 	float: right;
 	text-transform: uppercase;
 }
-.main_mnu ul li a{
-	color: #fff;
-	padding: 10px;
-	display: block;
-	-webkit-transition: all .5s;
-	-o-transition: all .5s;
-	transition: all .5s;
+.main_mnu ul li a{
+	color: #fff;
+	padding: 0px 10px;
+	display: block;	
 }
-.main_mnu ul li a:hover{
-	color: #FFA07A;
+.main_mnu ul li a:hover{	color: #fff;
+    border-radius: 100px;
+    background: url(../images/label2opasity.png);
 }
 .main_mnu ul{
 	margin: 0px;
@@ -72,15 +71,16 @@ body {
 }
 .main_mnu ul li{
 	display: inline-block;
-	line-height: 80px;
+	line-height: 60px;
+	margin-top: 20px;
 }
-.main_label{
-	border: 10px solid #43484c;
-	padding: 10px;
-	margin: 120px;
-	border-image: url(../images/label2.JPG) 15 round round;
+.main_label{
+	border: 10px solid #43484c;
+	padding: 10px;
+	margin: 30px 0px;
 	text-align: center;
-	position: absolute;
+	border-radius: 30px;
+	font-family: "MarckScriptRegular";
 }
 .collections ul,
 .collections li{
@@ -114,7 +114,54 @@ body {
 }
 h2{
 	text-align: center;
-}
+}
+h4{
+	color: #43484c;
+	font-family: "MarckScriptRegular";
+	margin: 0px;
+	text-align: center;
+	font-size: 25px;
+}.forms{
+	margin: 30px 0px;
+	background: url(../images/label2opasity.png);
+	border-radius: 30px;
+	padding: 25px 35px;
+}
+label{
+	margin-top: 20px;
+	margin-bottom: 20px;
+	display: block;
+}
+input{
+	display: block;
+	width: 100%;
+	box-shadow: 0px -3px;
+	text-undent: 10px;
+	padding: 0px 5px;
+	font-size: 20px;
+}
+.buttons{
+	display: inline-block;
+	background-color: #43484c;
+	color: #fff;
+	border: none;
+	padding: 12px 30px;
+	border-radius: 10px;
+}
+.buttons:hover{
+	background-color: #505559;
+}
+.buttons:active{
+	background-color: #41464A;
+}
+.button-wrap{
+	text-align: center;
+}
+.arrow-bottom{
+	text-align: center;
+	margin-top: 50px;
+	cursor: pointer;
+}
 .toggle-mnu {
   display: block;
   width: 28px;
