--- a/css/media.css
+++ b/css/media.css
@@ -21,7 +21,6 @@
         padding: 15px;
     }
     .main_mnu ul li a:hover{
-        color: #fff;
         border-radius: 100px;
         background: url(../images/label2opasity.png);
     }
@@ -40,6 +39,12 @@
     }
     .toggle-mnu{
         margin: 35px auto 0px;;
+    }
+    .main_label h1{
+        font-size: 20px;
+    }
+    .main_label{
+        border: 5px solid #43484c;
     }
 }
 
@@ -68,7 +73,9 @@
 
 /* Medium Devices, Desktops */
 @media only screen and (min-width : 992px) {
-
+    .main_mnu{
+        display: block !important;
+    }
 }
 
  /* Large Devices, Wide Screens */
