--- a/css/fonts.css
+++ b/css/fonts.css
@@ -90,3 +90,31 @@
 			font-style: normal;
 			font-weight: normal;
 	}
+	/* Код для подключения шрифта в /css/stylename.css */
+
+	@font-face {
+			font-family: "AlexanderRegular";
+			src: url("../fonts/AlexanderRegular/AlexanderRegular.eot");
+			src: url("../fonts/AlexanderRegular/AlexanderRegular.eot?#iefix")format("embedded-opentype"),
+			url("../fonts/AlexanderRegular/AlexanderRegular.woff") format("woff"),
+			url("../fonts/AlexanderRegular/AlexanderRegular.ttf") format("truetype");
+			font-style: normal;
+			font-weight: normal;
+	}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
