--- a/css/main.css
+++ b/css/main.css
@@ -90,7 +90,8 @@ body {
 	list-style-type: none;
 	position: relative;
 }
-.collections li{
+.collections ul li{
+	margin: 0px 0px 30px 30px;
 	display: inline-block;
 	width: 300px;
 	position: relative;
@@ -100,6 +101,10 @@ body {
 	display: block;
 }
 .description{
+	font-size: 20px;
+	padding: 80px 0px;
+	text-transform: uppercase;
+	text-align: center;
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -213,9 +218,11 @@ input{
 }
 .homesect{
 	background-color: #43484c;
+	min-height: 620px;
 }
-.uncollected_gift h2{
+.uncollected_gift{
 	color: #fff;
+	
 }
 
 
