--- a/css/main.css
+++ b/css/main.css
@@ -261,6 +261,43 @@ input{
 .collected_gift{
     color: #fff;
 }
-
+.points{
+    margin-top: 170px;
+}
+.points ul li img{
+    max-width: 100%;
+	display: block;
+}
+.points ul,
+.points li{
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+	position: relative;
+}
+.points ul li{
+	margin: 0px 0px 30px 30px;
+	display: inline-block;
+	width: 300px;
+	position: relative;
+}
+.description{
+	font-size: 20px;
+	padding: 80px 0px;
+	text-transform: uppercase;
+	text-align: center;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,.5);
+	color: #fff;
+	opacity: 0;
+	-webkit-transition: all .5s;
+	-o-transition: all .5s;
+	transition: all .5s;
+}
+.points li:hover .description{
+	opacity: 1;
+}
 
 
