--- a/css/main.css
+++ b/css/main.css
@@ -179,6 +179,14 @@ input{
 	padding: 0px 5px;
 	font-size: 20px;
 }
+textarea{
+	display: block;
+	width: 100%;
+	box-shadow: 0px -3px;
+	text-undent: 10px;
+	padding: 0px 5px;
+	font-size: 20px;
+}
 .buttons{
 	display: inline-block;
 	background-color: #43484c;
